--- a/1.6/Defs/Layouts/LayoutRoomDefs_CollectorLair.xml
+++ b/1.6/Defs/Layouts/LayoutRoomDefs_CollectorLair.xml
@@ -47,6 +47,12 @@
       <li>CarpetMossBright</li>
       <li>CarpetBlue</li>
     </floorTypes>
+    <prefabs>
+      <NAT_CollectionCase>
+        <countPerTenEdgeCells>10</countPerTenEdgeCells>
+        <minMaxRange>1~10</minMaxRange>
+      </NAT_CollectionCase>
+    </prefabs>
     <edgeTerrain>TileMarble</edgeTerrain>
   </LayoutRoomDef>
 
