--- a/1.6/Defs/Layouts/LayoutDefs_CollectorLair.xml
+++ b/1.6/Defs/Layouts/LayoutDefs_CollectorLair.xml
@@ -6,21 +6,20 @@
     <workerClass>NAT.LayoutWorker_CollectorLair</workerClass>
     <canHaveMultipleLayoutsInRoom>false</canHaveMultipleLayoutsInRoom>
     <clearRoomsEntirely>true</clearRoomsEntirely>
-    <minRoomWidth>11</minRoomWidth>
-    <minRoomHeight>11</minRoomHeight>
-    
+    <minRoomWidth>7</minRoomWidth>
+    <minRoomHeight>7</minRoomHeight>
+
     <!-- Structure -->
     <doorStuffDef>WoodLog</doorStuffDef>
-    <wallStuffDef>BlocksMarble</wallStuffDef>
-    <wallLampDef>TorchWallLamp</wallLampDef>
-    
+    <wallStuffDef>BlocksGranite</wallStuffDef>
+
     <roomDefs>
 
       <NAT_CollectorLairEntrance>
         <weight>999</weight>
         <countRange>1</countRange>
       </NAT_CollectorLairEntrance>
-      
+
       <NAT_CollectorBedroom>
         <weight>999</weight>
         <countRange>1</countRange>
@@ -29,8 +28,45 @@
       <NAT_CollectionRoom>
         <weight>1</weight>
       </NAT_CollectionRoom>
-      
+
     </roomDefs>
+    <junkScaterrers>
+      <Filth_Trash>
+        <groupsPerHundredCells>0~3</groupsPerHundredCells>
+        <itemsPerGroup>2~4</itemsPerGroup>
+        <groupDistRange>3~5</groupDistRange>
+      </Filth_Trash>
+      <Filth_BlastMark>
+        <groupsPerHundredCells>-2~1</groupsPerHundredCells>
+        <!-- ~66% to not appear -->
+        <itemsPerGroup>1~1</itemsPerGroup>
+      </Filth_BlastMark>
+      <Filth_MachineBits>
+        <groupsPerHundredCells>-1~1</groupsPerHundredCells>
+        <!-- ~50% to not appear -->
+        <itemsPerGroup>2~4</itemsPerGroup>
+        <groupDistRange>2~4</groupDistRange>
+      </Filth_MachineBits>
+      <CollapsedRocks>
+        <groupsPerHundredCells>1~2</groupsPerHundredCells>
+        <itemsPerGroup>2~8</itemsPerGroup>
+        <groupDistRange>1~3</groupDistRange>
+        <minGroups>1</minGroups>
+      </CollapsedRocks>
+      <Filth_RubbleRock>
+        <groupsPerHundredCells>2~4</groupsPerHundredCells>
+        <itemsPerGroup>3~8</itemsPerGroup>
+        <groupDistRange>3~5</groupDistRange>
+        <minGroups>1</minGroups>
+      </Filth_RubbleRock>
+      <Granite>
+        <groupsPerHundredCells>1~2</groupsPerHundredCells>
+        <itemsPerGroup>3~8</itemsPerGroup>
+        <groupDistRange>1~2</groupDistRange>
+        <minGroups>1</minGroups>
+      </Granite>
+    
+  </junkScaterrers>
   </StructureLayoutDef>
-  
+
 </Defs>
