--- a/1.6/Defs/Layouts/LayoutDefs_Rusted.xml
+++ b/1.6/Defs/Layouts/LayoutDefs_Rusted.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Defs>
-  
+
   <NAT.RustedLayoutDef>
     <defName>NAT_RustedOutpost</defName>
     <workerClass>NAT.LayoutWorker_RustedBase</workerClass>
+    <clearRoomsEntirely>true</clearRoomsEntirely>
     <minRoomWidth>5</minRoomWidth>
     <minRoomHeight>5</minRoomHeight>
     <wallDef>NAT_RustedWall</wallDef>
     <doorDef>NAT_RustedDoor</doorDef>
-	<terrainDef>NAT_RustedFloor</terrainDef>
+    <terrainDef>NAT_RustedFloor</terrainDef>
     <clearDoorFaction>false</clearDoorFaction>
     <corridorDef>NAT_OutpostCorridor</corridorDef>
     <canDisconnectRooms>false</canDisconnectRooms>
@@ -66,15 +67,16 @@
       </NAT_RustedStorage>
     </roomDefs>
   </NAT.RustedLayoutDef>
-  
+
   <NAT.RustedLayoutDef>
     <defName>NAT_RustedCitadel</defName>
     <workerClass>NAT.LayoutWorker_RustedBase</workerClass>
+    <clearRoomsEntirely>true</clearRoomsEntirely>
     <minRoomWidth>7</minRoomWidth>
     <minRoomHeight>7</minRoomHeight>
     <wallDef>NAT_RustedWall</wallDef>
     <doorDef>NAT_RustedDoor</doorDef>
-	<terrainDef>NAT_RustedFloor</terrainDef>
+    <terrainDef>NAT_RustedFloor</terrainDef>
     <clearDoorFaction>false</clearDoorFaction>
     <corridorDef>NAT_CitadelCorridor</corridorDef>
     <canDisconnectRooms>false</canDisconnectRooms>
@@ -143,5 +145,5 @@
       </NAT_RustedStorage>
     </roomDefs>
   </NAT.RustedLayoutDef>
-  
+
 </Defs>
