--- a/1.6/Defs/Layouts/LayoutRoomDefs_Rusted.xml
+++ b/1.6/Defs/Layouts/LayoutRoomDefs_Rusted.xml
@@ -8,10 +8,9 @@
     </floorTypes>
     <prefabs>
       <NAT_RustedFoamTurret_Edge>
-        <countPerTenEdgeCells>0.25</countPerTenEdgeCells>
+        <countPerTenEdgeCells>0.1</countPerTenEdgeCells>
       </NAT_RustedFoamTurret_Edge>
     </prefabs>
-    <edgeTerrain>NAT_RustedFloor</edgeTerrain>
   </LayoutRoomDef>
 
   <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
@@ -25,6 +24,20 @@
 
   <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
     <defName>NAT_RustedHall</defName>
+  </LayoutRoomDef>
+
+  <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
+    <defName>NAT_RustedRoom</defName>
+    <prefabs>
+      <NAT_RustedBox_Edge>
+        <countPerTenEdgeCells>3</countPerTenEdgeCells>
+        <minMaxRange>0~3</minMaxRange>
+      </NAT_RustedBox_Edge>
+      <NAT_RustedWallBlock>
+        <countPerHundredCells>1.25</countPerHundredCells>
+        <minMaxRange>0~2</minMaxRange>
+      </NAT_RustedWallBlock>
+    </prefabs>
   </LayoutRoomDef>
 
   <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
@@ -49,17 +62,68 @@
   </LayoutRoomDef>
 
   <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
-    <defName>NAT_RustedRoom</defName>
+    <defName>NAT_RustedBarracks</defName>
+    <roomContentsWorkerType>NAT.RoomContents_RustedBarracks</roomContentsWorkerType>
     <prefabs>
       <NAT_RustedBox_Edge>
         <countPerTenEdgeCells>3</countPerTenEdgeCells>
         <minMaxRange>1~3</minMaxRange>
       </NAT_RustedBox_Edge>
-      
+      <NAT_RustedPallet>
+        <countPerTenEdgeCells>2</countPerTenEdgeCells>
+      </NAT_RustedPallet>
+      <NAT_RustedPalletCluster>
+        <countPerTenEdgeCells>1</countPerTenEdgeCells>
+        <minMaxRange>0~1</minMaxRange>
+      </NAT_RustedPalletCluster>
       <NAT_RustedWallBlock>
         <countPerHundredCells>1.25</countPerHundredCells>
         <minMaxRange>0~2</minMaxRange>
       </NAT_RustedWallBlock>
+    </prefabs>
+  </LayoutRoomDef>
+
+  <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
+    <defName>NAT_RustedBedroom</defName>
+    <roomContentsWorkerType>NAT.RoomContents_RustedBedroom</roomContentsWorkerType>
+    <prefabs>
+      <NAT_RustedBox_Edge>
+        <countPerTenEdgeCells>3</countPerTenEdgeCells>
+        <minMaxRange>1~3</minMaxRange>
+      </NAT_RustedBox_Edge>
+      <NAT_RustedPallet>
+        <countPerTenEdgeCells>2</countPerTenEdgeCells>
+      </NAT_RustedPallet>
+      <NAT_RustedPalletCluster>
+        <countPerTenEdgeCells>1</countPerTenEdgeCells>
+        <minMaxRange>0~1</minMaxRange>
+      </NAT_RustedPalletCluster>
+      <NAT_RustedWallBlock>
+        <countPerHundredCells>1.25</countPerHundredCells>
+        <minMaxRange>0~2</minMaxRange>
+      </NAT_RustedWallBlock>
+    </prefabs>
+  </LayoutRoomDef>
+
+  <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
+    <defName>NAT_RustedHarbingerGarden</defName>
+    <roomContentsWorkerType>NAT.RoomContents_HarbingerGarden</roomContentsWorkerType>
+    <prefabs>
+      <NAT_RustedBox_Edge>
+        <countPerTenEdgeCells>3</countPerTenEdgeCells>
+        <minMaxRange>1~3</minMaxRange>
+      </NAT_RustedBox_Edge>
+    </prefabs>
+  </LayoutRoomDef>
+
+  <LayoutRoomDef ParentName="NAT_BaseRustedRoom">
+    <defName>NAT_RustedCheckpost</defName>
+    <roomContentsWorkerType>NAT.RoomContents_RustedPawns</roomContentsWorkerType>
+    <prefabs>
+      <NAT_RustedBox_Edge>
+        <countPerTenEdgeCells>3</countPerTenEdgeCells>
+        <minMaxRange>1~3</minMaxRange>
+      </NAT_RustedBox_Edge>
     </prefabs>
   </LayoutRoomDef>
 
